--- a/AngelOne_API.ipynb
+++ b/AngelOne_API.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhHT+ozaw/YdKeMuFUEong",
+      "authorship_tag": "ABX9TyO6nBOL4Fcuk425cXeWLvuV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -248,6 +248,18 @@
       ],
       "metadata": {
         "id": "dAcSZbfdU8Xq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == \"__main__\":\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "AhH4DoU-2Jnq"
       },
       "execution_count": null,
       "outputs": []
