--- a/AngelOne_API.ipynb
+++ b/AngelOne_API.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6nBOL4Fcuk425cXeWLvuV",
+      "authorship_tag": "ABX9TyPdBsBxPrM+E8NytLe7u6Yo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,8 +99,7 @@
       "cell_type": "code",
       "source": [
         "BASE_URL = \"https://www.angelone.in/\"\n",
-        "\n",
-        "MAIN_ROOT = \"wp-json/facetwp/v1/refresh\""
+        "MAIN_ROOT = \"wp-json/facetwp/v1/refresh\"\n"
       ],
       "metadata": {
         "id": "zXsYLmXiKJ4h"
