--- a/AngelOne_API.ipynb
+++ b/AngelOne_API.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -27,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "G5fO5u7K_rlB"
+      },
       "source": [
         "Origianl API call from AngelOne.\n",
         "```python\n",
@@ -75,39 +63,43 @@
         "  # There was an error\n",
         "  print(\"Error:\", response.status_code, response.text)\n",
         "```"
-      ],
-      "metadata": {
-        "id": "G5fO5u7K_rlB"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Rlpkvc66BFtt"
+      },
+      "outputs": [],
       "source": [
         "import json\n",
         "import requests\n",
         "from bs4 import BeautifulSoup\n",
-        "from openpyxl import Workbook\n"
-      ],
-      "metadata": {
-        "id": "Rlpkvc66BFtt"
-      },
-      "execution_count": null,
-      "outputs": []
+        "from openpyxl import Workbook\n",
+        "from tqdm import tqdm\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "BASE_URL = \"https://www.angelone.in/\"\n",
-        "MAIN_ROOT = \"wp-json/facetwp/v1/refresh\"\n"
-      ],
+      "execution_count": 15,
       "metadata": {
         "id": "zXsYLmXiKJ4h"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "BASE_URL = \"https://www.angelone.in/\"\n",
+        "MAIN_ROOT = \"wp-json/facetwp/v1/refresh\"\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "rx40SZh3oaPm"
+      },
+      "outputs": [],
       "source": [
         "def api(payload, base_url=BASE_URL, root=MAIN_ROOT):\n",
         "  url = base_url + root\n",
@@ -119,16 +111,16 @@
         "    return {\"Error\": f\"Error sending request: {e}\"}\n",
         "\n",
         "  return response.json()\n"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "rx40SZh3oaPm"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "dsAFyiXPMpZy"
+      },
+      "outputs": [],
       "source": [
         "def fetch_stock_sectors():\n",
         "  \"\"\"\n",
@@ -162,16 +154,15 @@
         "\n",
         "# Example usage\n",
         "# fetch_stock_sectors()"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "dsAFyiXPMpZy"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dfm_nDCGKsFx"
+      },
+      "outputs": [],
       "source": [
         "def fetch_company_names(stock_sector):\n",
         "    payload = {\n",
@@ -209,15 +200,15 @@
         "\n",
         "# Example usage\n",
         "# fetch_company_names(\"logistics\")\n"
-      ],
-      "metadata": {
-        "id": "dfm_nDCGKsFx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dAcSZbfdU8Xq"
+      },
+      "outputs": [],
       "source": [
         "def write_sector_data_to_excel(workbook, sectors):\n",
         "  \"\"\"\n",
@@ -230,7 +221,7 @@
         "  worksheet = workbook.active\n",
         "  worksheet.append([\"Sector\", \"Company\"])  # Add header row\n",
         "\n",
-        "  for sector, companies in sectors.items():\n",
+        "  for sector, companies in tqdm(sectors.items(), desc=\"Fetching sectors\", total=len(sectors)):\n",
         "    for company in companies:\n",
         "      worksheet.append([sector, company])\n",
         "\n",
@@ -243,24 +234,47 @@
         "  workbook = Workbook()\n",
         "  write_sector_data_to_excel(workbook, company_data_by_sector)\n",
         "  workbook.save(\"frameData.xlsx\")\n"
-      ],
-      "metadata": {
-        "id": "dAcSZbfdU8Xq"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "background_save": true
+        },
+        "id": "KpRMlweYWS4j",
+        "outputId": "adf0a53e-1a56-4a6c-b22a-7fc1a7dd415e"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Fetching sectors: 100%|██████████| 83/83 [00:00<00:00, 3216.25it/s]\n"
+          ]
+        }
+      ],
       "source": [
         "if __name__ == \"__main__\":\n",
-        "    main()"
-      ],
-      "metadata": {
-        "id": "AhH4DoU-2Jnq"
-      },
-      "execution_count": null,
-      "outputs": []
+        "  main()"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyMGLI+rEO9acQPVA34YSR/Y",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
